# ezms2rss

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
docs/diary/: 20230522_todo.txt  20230815_python_pj_structure.txt  20231015_todo.txt  20231105_fuctions.txt
sample/: sample.py
src/: main.py  sub_ms2rss.py
src/common/: configs.py  logger.py
src/configs/: application.yml  application_modify.yaml  credentials_modify.yaml  credentials_modify.yml  logger.yaml
src/utils/: __init__.py  assemble_querys.py  misc_functions.py  ms2.py  notify.py  xlsx.py
tests/: test_main.py
tmp/: ms2rssWorkbook.xlsx  ms2rssWorkbook_test.xlsx  ms2rss_test.xlsx  orderidlist.csv  orderlist.csv  positionlist.csv  tmpms2rss_test.xlsx  tmporderlist.csv  tmppositionlist.csv
